# fagso

./: CMakeLists.txt  README.md
data/: Coactivation_matrix.adj  Coactivation_matrix.weight  karate.gml  karate.net  toy.adj  toy.txt
doc/: README.txt
src/: CMakeLists.txt
src/fagso/: AsymptoticEntropy.cpp  AsymptoticEntropy.cpp.orig  AsymptoticEntropy.h  AsymptoticModularity.cpp  AsymptoticModularity.h  AsymptoticSignificance.cpp  AsymptoticSignificance.h  AsymptoticSurprise.cpp  AsymptoticSurprise.h  CMakeLists.txt  Common.cpp  Common.cpp.orig  Common.h  Common.h.orig  DisjointSet.cpp  DisjointSet.cpp.orig  DisjointSet.h  Entropy.cpp  Entropy.cpp.orig  Entropy.h  Fagso.cpp  Fagso.cpp.orig  Fagso.h  Fagso.h.orig  FagsoParams.h  FileLogger.h  FileLogger.h.orig  Graph.cpp  Graph.cpp.orig  Graph.h  KLDivergence.cpp  KLDivergence.h  RandomShufflePercentage.h  SimilarityIndices.cpp  SimilarityIndices.cpp.orig  SimilarityIndices.h  Surprise.cpp  Surprise.cpp.orig  Surprise.h  Surprise.h.orig  (+12 more)
